--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,7 +6,8 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Manrope', sans-serif;
+    /* font-family: 'Manrope', sans-serif; */
+    /* font-family: 'Red Hat Display', sans-serif; */
     background-color: var(--theme-color);
 }
 
