--- a/src/app/Component/AboutUsLayout/AboutUs.module.css
+++ b/src/app/Component/AboutUsLayout/AboutUs.module.css
@@ -13,6 +13,12 @@
     width: 100%;
 }
 
+.aboutUsLeftContent span {
+  background: linear-gradient(90deg, #b26ff2, #8b5cf6);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+    
 .aboutUsLeftContent h1 {
     font-size: clamp(40px, 10vw, 90px);
     font-weight: 800;
